File tooltips in File Browser show up inconsistently across Display Modes #118066

Closed
opened 2024-02-09 22:42:56 +01:00 by Loïc DAUTRY · 3 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.29

Blender Version
Broken:

  • 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
  • 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-08 19:55, hash: 2e6223d90f3f
  • 4.2.0 Alpha, branch: main, commit date: 2024-02-09 16:43, hash: 7e13522a4fd0

Short description of error

I captured a demo on 4.2, but the issue is the same across versions. When in Thumbnail Display Mode, the displaying of a file's tooltip seems to trigger as soon as I hover a file, no matter where the cursor is on the file.
But in other Display Modes, it seems to work only when hovering the tiny icon on the left (which is inconsistent with Thumbnail Display Mode and harder to perform). And even then, it seems to not work consistently every time:

2024-02-09_16h28_blender_1412.gif

Exact steps for others to reproduce the error

Open the File Browser, and try to hover different files in different Display Modes to see how consistently the tooltip does show up.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.29 **Blender Version** Broken: - 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` - 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-08 19:55, hash: `2e6223d90f3f` - 4.2.0 Alpha, branch: main, commit date: 2024-02-09 16:43, hash: `7e13522a4fd0` **Short description of error** I captured a demo on 4.2, but the issue is the same across versions. When in Thumbnail Display Mode, the displaying of a file's tooltip seems to trigger as soon as I hover a file, **no matter where the cursor is on the file**. But in other Display Modes, it seems to work only when hovering the tiny icon on the left (which is inconsistent with Thumbnail Display Mode and harder to perform). And even then, it seems to not work consistently every time: ![2024-02-09_16h28_blender_1412.gif](/attachments/fb723bda-c5d9-42ab-a858-66c25655059b) **Exact steps for others to reproduce the error** Open the File Browser, and try to hover different files in different Display Modes to see how consistently the tooltip does show up.
Loïc DAUTRY added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-09 22:42:56 +01:00
No description provided.
Iliya Katushenock added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-02-09 23:10:01 +01:00
@Harley /
Member

Yes, I've notice the same thing too. It makes more of a difference now that we have those fancy tooltips.

Yes, I've notice the same thing too. It makes more of a difference now that we have those fancy tooltips.
Harley Acheson added this to the User Interface project 2024-02-10 01:01:58 +01:00
Harley Acheson self-assigned this 2024-02-10 01:02:04 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-14 20:21:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118066
No description provided.