source/blender/editors/space_file/file_draw.cc
@@ -1293,6 +1293,10 @@ void file_draw_list(const bContext *C, ARegion *region)
                                      nullptr);
           UI_but_dragflag_enable(drag_but, UI_BUT_DRAG_FULL_BUT);
           file_but_enable_drag(drag_but, sfile, file, path, nullptr, icon, UI_SCALE_FAC);
+          UI_but_func_tooltip_custom_set(drag_but,
+                                         file_draw_tooltip_custom_func,
+                                         file_tooltip_data_create(sfile, file),
+                                         MEM_freeN);
         }
       }
 
